@@ -53,6 +53,7 @@ tasks {
     dependsOn(jacocoTestReport)
   }
   test {
+    jvmArgs("--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED")
     environment["SENTRY_TEST_PROPERTY"] = "\"some-value\""
     environment["SENTRY_TEST_MAP_KEY1"] = "\"value1\""
     environment["SENTRY_TEST_MAP_KEY2"] = "value2"
